--- a/app/src/main/res/layout/activity_acitivity_page.xml
+++ b/app/src/main/res/layout/activity_acitivity_page.xml
@@ -114,6 +114,7 @@
                 android:layout_width="372dp"
                 android:layout_height="370dp"
                 android:layout_marginTop="20dp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView15"
@@ -128,6 +129,7 @@
                 android:text="Step Tracker"
                 android:textColor="@color/primaryText"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 app:layout_constraintTop_toTopOf="@+id/imageView12" />
@@ -144,6 +146,7 @@
                 android:textColor="@color/primaryText"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -158,6 +161,7 @@
                 android:textColor="?attr/colorPrimary"
                 android:textSize="21sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/imageView12"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -173,6 +177,7 @@
                 android:textColor="?attr/colorPrimary"
                 android:textSize="21sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -186,6 +191,7 @@
                 android:textColor="@color/primaryText"
                 android:textSize="21sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/imageView12"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -202,6 +208,7 @@
                 android:progress="0"
                 android:progressDrawable="@drawable/circle_progress_bar_primary"
                 android:textAlignment="center"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/imageView12"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -210,6 +217,7 @@
                 android:id="@+id/imageView74"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/pbActStep"
                 app:layout_constraintEnd_toEndOf="@+id/pbActStep"
                 app:layout_constraintStart_toStartOf="@+id/pbActStep"
@@ -227,6 +235,7 @@
                 android:text="Daily Goal "
                 android:textColor="@color/tertiaryDarkText"
                 android:textSize="12sp"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/pbActStep" />
 
@@ -240,6 +249,7 @@
                 android:text=" steps"
                 android:textColor="@color/tertiaryDarkText"
                 android:textSize="12sp"
+                android:visibility="gone"
                 app:layout_constraintStart_toEndOf="@+id/tvActStepGoal"
                 app:layout_constraintTop_toBottomOf="@+id/pbActStep" />
 
@@ -301,6 +311,7 @@
                 android:text="4,000"
                 android:textColor="@color/primaryText"
                 android:textSize="12sp"
+                android:visibility="gone"
                 app:layout_constraintStart_toEndOf="@+id/textView16"
                 app:layout_constraintTop_toBottomOf="@+id/pbActStep" />
 
@@ -313,6 +324,7 @@
                 android:textColor="?attr/colorPrimary"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/imageView12"
                 app:layout_constraintStart_toStartOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/imageView74" />
@@ -325,19 +337,28 @@
                 android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+                app:layout_constraintTop_toBottomOf="@+id/pieChart" />
 
             <ProgressBar
                 android:id="@+id/pbActivityContent"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:indeterminateTint="?attr/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
-
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/pieChart"
+                android:layout_width="372dp"
+                android:layout_height="370dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/rectangle_shape"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
