--- a/app/src/main/res/layout/activity_act_sleep_tracker.xml
+++ b/app/src/main/res/layout/activity_act_sleep_tracker.xml
@@ -96,13 +96,14 @@
         android:id="@+id/tvSleepTrackerTaken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="0 Hours"
         android:textColor="?attr/colorPrimary"
         android:textSize="21sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
@@ -231,6 +232,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:progressTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
