--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -111,16 +111,16 @@
                     android:text="Calorie"
                     android:textColor="@color/tertiaryDarkText" />
 
-                <TextView
-                    android:id="@+id/sleepTab"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="Sleep"
-                    android:textColor="@color/tertiaryDarkText" />
+<!--                <TextView-->
+<!--                    android:id="@+id/sleepTab"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:fontFamily="@font/poppins_semibold"-->
+<!--                    android:gravity="center"-->
+<!--                    android:padding="10dp"-->
+<!--                    android:text="Sleep"-->
+<!--                    android:textColor="@color/tertiaryDarkText" />-->
             </LinearLayout>
 
             <androidx.fragment.app.FragmentContainerView
