--- a/app/src/main/res/layout/fragment_profile_set_sleep_goal.xml
+++ b/app/src/main/res/layout/fragment_profile_set_sleep_goal.xml
@@ -225,6 +225,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:indeterminateTint="?attr/colorPrimary"
         android:progressDrawable="@drawable/circle_progress_bar_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView46"
