--- a/app/src/main/res/layout/fragment_profile_sleep.xml
+++ b/app/src/main/res/layout/fragment_profile_sleep.xml
@@ -87,6 +87,7 @@
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/rectangle_shape"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sleepBarChart" />
@@ -102,6 +103,7 @@
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView34"
         app:layout_constraintTop_toTopOf="@+id/imageView34" />
 
@@ -112,6 +114,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/rectangle_shape"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView34"
         app:layout_constraintTop_toBottomOf="@+id/textView60" />
 
@@ -121,6 +124,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/rectangle_shape"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView34"
         app:layout_constraintStart_toEndOf="@+id/imageView36"
         app:layout_constraintTop_toBottomOf="@+id/textView60" />
@@ -135,6 +139,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="Set Goal"
         android:textColor="@color/btnText"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView34"
         app:layout_constraintStart_toStartOf="@+id/imageView34"
         app:layout_constraintTop_toBottomOf="@+id/imageView36" />
@@ -149,6 +154,7 @@
         android:text="DAILY HOURS"
         android:textColor="@color/primaryText"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView36"
         app:layout_constraintTop_toTopOf="@+id/imageView36" />
 
@@ -160,6 +166,7 @@
         android:text="0"
         android:textColor="?attr/colorPrimary"
         android:textSize="32sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView36"
         app:layout_constraintStart_toStartOf="@+id/imageView36"
         app:layout_constraintTop_toBottomOf="@+id/textView61" />
@@ -174,6 +181,7 @@
         android:text="WEEKLY HOURS"
         android:textColor="@color/primaryText"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView37"
         app:layout_constraintTop_toTopOf="@+id/imageView37" />
 
@@ -185,6 +193,7 @@
         android:text="0"
         android:textColor="?attr/colorPrimary"
         android:textSize="32sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView37"
         app:layout_constraintStart_toStartOf="@+id/imageView37"
         app:layout_constraintTop_toBottomOf="@+id/textView63" />
@@ -194,6 +203,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:indeterminateTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
