--- a/app/src/main/res/layout/fragment_profile_steps.xml
+++ b/app/src/main/res/layout/fragment_profile_steps.xml
@@ -194,6 +194,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:indeterminateTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
