--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -87,21 +87,7 @@
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/textView159" />
 
-    <TextView
-        android:id="@+id/textView161"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
-        android:text="Notifications"
-        android:textColor="@color/primaryText"
-        android:textSize="18sp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/textView160" />
-
-        <ImageView
+    <ImageView
             android:id="@+id/imSettingsEditProfile"
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -122,25 +108,14 @@
             app:srcCompat="@drawable/arrow_right_black" />
 
     <ImageView
-        android:id="@+id/imSettingsNotifications"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:visibility="gone"
+        android:id="@+id/imageView109"
+        android:layout_width="372dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/imSettingsChangePass"
-        app:srcCompat="@drawable/arrow_right_black" />
-
-        <ImageView
-            android:id="@+id/imageView109"
-            android:layout_width="372dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView84"
-            app:layout_constraintStart_toStartOf="@+id/imageView84"
-            app:layout_constraintTop_toBottomOf="@+id/textView161"
-            app:srcCompat="@drawable/line_divider" />
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintTop_toBottomOf="@+id/textView160"
+        app:srcCompat="@drawable/line_divider" />
 
     <TextView
         android:id="@+id/textView162"
@@ -177,4 +152,15 @@
             app:layout_constraintEnd_toEndOf="@+id/imageView109"
             app:layout_constraintTop_toBottomOf="@+id/textView162"
             app:srcCompat="@drawable/arrow_right_black" />
+
+    <ProgressBar
+        android:id="@+id/pbSettingFragment"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintTop_toTopOf="@+id/imageView84" />
 </androidx.constraintlayout.widget.ConstraintLayout>
