--- a/app/src/main/res/layout/fragment_settings_change_password.xml
+++ b/app/src/main/res/layout/fragment_settings_change_password.xml
@@ -227,4 +227,15 @@
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/etChangePassConfirmPass" />
 
+    <ProgressBar
+        android:id="@+id/pbSettingChangePass"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView84"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintTop_toTopOf="@+id/imageView84" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
