--- a/app/src/main/res/layout/fragment_settings_design.xml
+++ b/app/src/main/res/layout/fragment_settings_design.xml
@@ -88,20 +88,6 @@
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/textView159" />
 
-    <TextView
-        android:id="@+id/textView161"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
-        android:text="Notifications"
-        android:textColor="@color/primaryText"
-        android:textSize="18sp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/textView160" />
-
     <ImageView
         android:id="@+id/imDesignEditProfile"
         android:layout_width="25dp"
@@ -123,24 +109,13 @@
         app:srcCompat="@drawable/arrow_right_black" />
 
     <ImageView
-        android:id="@+id/imDesignNotification"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/imDesignChangePass"
-        app:srcCompat="@drawable/arrow_right_black" />
-
-    <ImageView
         android:id="@+id/imageView109"
         android:layout_width="372dp"
         android:layout_height="1dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/textView161"
+        app:layout_constraintTop_toBottomOf="@+id/textView160"
         app:srcCompat="@drawable/line_divider" />
 
     <TextView
@@ -238,6 +213,17 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/btnChangeThemeSecond" />
+
+    <ProgressBar
+        android:id="@+id/pbSettingDesign"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView84"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintTop_toTopOf="@+id/imageView84" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
