--- a/app/src/main/res/layout/fragment_settings_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_settings_edit_profile.xml
@@ -227,9 +227,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:indeterminateTint="?attr/colorPrimary"
         android:progressDrawable="@drawable/circle_progress_bar_primary"
         app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
         app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/etEditProfilePassword" />
+
+    <ProgressBar
+        android:id="@+id/pbSettingEditProfile"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@+id/imEditProfileBack"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
+        app:layout_constraintTop_toTopOf="@+id/imEditProfileBack" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
