--- a/app/src/main/res/layout/activity_act_bmitracker.xml
+++ b/app/src/main/res/layout/activity_act_bmitracker.xml
@@ -65,6 +65,7 @@
         android:hint="Weight (Kg)"
         android:inputType="number"
         android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/primaryText"
         android:textColorHint="@color/tertiaryDarkText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,6 +83,7 @@
         android:hint="Height (meters)"
         android:inputType="numberDecimal"
         android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textColor="@color/primaryText"
         android:textColorHint="@color/tertiaryDarkText"
         app:layout_constraintEnd_toEndOf="parent"
